hw05 fix review comments